# mcp-server-serper

./: .gitignore  Dockerfile.python  README.md  README_PYTHON.md  README_html_app.md  README_streamlit.md  README_streamlit_news.md  README_streamlit_scholar.md  README_streamlit_shopping.md  README_video_app.md  add_new_commands.md  image_search_app.py  instagram_message.json  main.py  mcp-solucionado.md  mcp_client.py  mcp_serper_server.py  news_search_streamlit.py  package-lock.json  package.json  resolucao_renderizacao_html_streamlit.md  serpapi-test.js  serper-search-scrape-mcp-server-0.2.0.tgz  serper_client.py  serper_search_app.py  setup_and_run.sh  shopping_search_streamlit.py  simplified_client.py  smithery.yaml  test-serper-api.js  test_autocomplete.py  test_image_search.py  test_mcp_commands.py  test_search.py  test_sequential_thinking.py  test_serper_search.py  test_sse.py  test_video_search.py  video_search_app.py  youtube_message.json
mcp-server-python/: README.md  basic_test.py  debug_sse.py  pyproject.toml  setup.sh  simple_sse_client.py  test_client.py  test_curl.sh
mcp-server-python/docs/: usando_clientes_mcp.md
mcp-server-python/examples/: client_example.py
mcp-server-python/src/mcp_server_serper/: __init__.py  __main__.py  config.py  main.py  serper_client.py  server.py
mcp-server-python/src/mcp_server_serper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-server-python/tests/: test_serper_client.py  test_server.py
problemas conhecidos/: bug_fix_html_escape.md  resolucao_renderizacao_html_streamlit.md
(+16 files in other folders)
